--- a/assignment/assignment1/index.html
+++ b/assignment/assignment1/index.html
@@ -50,11 +50,46 @@
 
     <!-- Sidebar -->
     <div class="sidebar">
+    <div>
+      <button>Hide Filters</button>
+      <h1>Filters</h1>
+    </div>
+    <div>
+      <p>By Name</p>
+      <input id="stringinput" type="text">
+    </div>
+    <div>
+      <p>By Grade</p>
+      <select>
+        <option value="all">All Grades</option>
+        <option value="Kindergarten">Kindergarten</option>
+        <option value="Primary">Primary School</option>
+        <option value="Middle">Middle School</option>
+        <option value="High">High School</option>
+      </select>
 
-      <!-- =====================
-      Add HTML!
-      ====================== -->
+    </div>
+      <h2>Schools</h2>
+      <div class="school">
+        <p class="name">Henry, Charles W.</p>
+        <p class="level">Elem/Middle</p>
+        <p class="address">601 Carpenter La.</p>
+        <p class="address">19119 - 3405</p>
+      </div>
 
+      <div class="school">
+        <p class="name">Universal Creighton Charter School</p>
+        <p class="level">Elem/Middle</p>
+        <p class="address">5401 Tabor Ave</p>
+        <p class="address">19120 - 3614</p>
+      </div>
+
+      <div class="school">
+        <p class="name">Marshall, John</p>
+        <p class="level">Elementary School</p>
+        <p class="address">4500 Griscom St.</p>
+        <p class="address">19124 - 3653</p>
+      </div>
     </div>
     <!-- Map -->
     <div id="map" class="map"></div>
